--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
   <link rel="stylesheet" href="./style.css">
   <style>
     canvas { width: 100%; height: 100%; }
+    #debug {width: 300px; height: 300px; position: absolute; top: 0; right: 0; background-color: black; color: white; opacity: 0.5; overflow-y:auto;}
   </style>
 </head>
 <body>
   <canvas id="renderCanvas"></canvas>
+  <div id="debug"></div>
   <script type="module" module src="game2.js"></script>
 </body>
 </html>
